--- a/docker/nginx/conf/api.dev-hpyenode.tw.conf
+++ b/docker/nginx/conf/api.dev-hpyenode.tw.conf
@@ -5,8 +5,8 @@ server {
     server_tokens off;
 
     charset utf-8;
-    root  /var/www/html/Site/api.hypenode.tw;
-    index public/index.php public/index.html public/index.htm;
+    root  /var/www/html/Site/api.hypenode.tw/public;
+    index index.php index.html index.htm;
 
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { access_log off; log_not_found off; }
