--- a/docker/nginx/conf/dev-hypenode.tw.conf
+++ b/docker/nginx/conf/dev-hypenode.tw.conf
@@ -5,8 +5,8 @@ server {
     server_tokens off;
 
     charset utf-8;
-    root  /var/www/html/Site/hypenode.tw;
-    index public/index.php public/index.html public/index.htm;
+    root  /var/www/html/Site/hypenode.tw/public;
+    index index.php index.html index.htm;
 
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { access_log off; log_not_found off; }
@@ -15,13 +15,6 @@ server {
     error_log  /var/log/nginx/dev-hypenode.tw.error.log;
 
     client_max_body_size 100M;
-
-    error_page 404 /View/404.html;
-
-    location ~* /(Application|Config|Template|View) {
-        deny all;
-        return 404;
-    }
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
@@ -38,7 +31,7 @@ server {
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_pass php:9000;
-        fastcgi_index  index.php;
+        fastcgi_index  public/index.php;
         fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
         fastcgi_param  NGINX_SERVER_ENV 'dev';
         include        fastcgi_params;
