--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -16,7 +16,8 @@ services:
     container_name: php
     networks:
       - backend
-    image: php:7.1.16-fpm
+    #image: php:7.1.16-fpm
+    build: ./php/
     expose:
       - 9000
     volumes:
@@ -45,6 +46,7 @@ services:
   mariadb:
     container_name: mariadb
     networks:
+      - frontend
       - backend
     image: mariadb:10.2
     ports:
