--- a/Site/hypenode.tw/.env
+++ b/Site/hypenode.tw/.env
@@ -6,12 +6,12 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
+DB_CONNECTION=mariadb
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=hypenode
+DB_USERNAME=root
+DB_PASSWORD=admin
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
