--- a/Site/hypenode.tw/.env
+++ b/Site/hypenode.tw/.env
@@ -6,8 +6,7 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mariadb
-DB_HOST=127.0.0.1
+DB_HOST=mariadb
 DB_PORT=3306
 DB_DATABASE=hypenode
 DB_USERNAME=root
