--- a/Site/hypenode.tw/composer.json
+++ b/Site/hypenode.tw/composer.json
@@ -11,6 +11,7 @@
         "laravel/tinker": "^1.0"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.4",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
@@ -23,12 +24,18 @@
             "database/factories"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Core\\": "../../System/Core",
+            "Libaray\\": "../../System/Libaray",
+            "Model\\": "../../System/Model"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "Tests\\": "tests/",
+            "Core\\": "../../System/Core",
+            "Libaray\\": "../../System/Libaray",
+            "Model\\": "../../System/Model"
         }
     },
     "extra": {
