--- a/Site/hypenode.tw/composer.json
+++ b/Site/hypenode.tw/composer.json
@@ -26,7 +26,7 @@
         "psr-4": {
             "App\\": "app/",
             "Core\\": "../../System/Core",
-            "Libaray\\": "../../System/Libaray",
+            "Library\\": "../../System/Library",
             "Model\\": "../../System/Model"
         }
     },
