--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -42,21 +42,37 @@ services:
       - ./../:/var/www/html/
 
 # mariadb
-  mariadb:
-    container_name: mariadb
+  mariadb-master:
+    container_name: mariadb-master
     networks:
       - backend
-    image: mariadb:10.2
+    build: ./mariadb/master-dockerfile/
     ports:
-      - "3306:3306"
+      - "13306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: admin
       MYSQL_DATABASE: hypenode
-      MYSQL_USER: test
-      MYSQL_PASSWORD: admin
-    command: mysqld --max_allowed_packet=1024M
+      MYSQL_USER: maria
+      MYSQL_PASSWORD: maria
     volumes:
-      - ./mariadb/data:/var/lib/mysql
+      - ./mariadb/data-master:/var/lib/mysql
+
+  mariadb-slave01:
+    container_name: mariadb-slave01
+    networks:
+      - backend
+    build: ./mariadb/slave-dockerfile/
+    links:
+      - mariadb-master
+    ports:
+      - "23306:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: admin
+      MYSQL_DATABASE: hypenode
+      MYSQL_USER: maria
+      MYSQL_PASSWORD: maria
+    volumes:
+      - ./mariadb/data-slave01:/var/lib/mysql
 
 # phpmyadmin
   phpmyadmin:
@@ -68,7 +84,7 @@ services:
     ports:
       - "8080:80"
     environment:
-      PMA_HOST: mariadb
+      PMA_HOST: mariadb-master
 
 # redis
   redis:
